--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,18 +57,17 @@ shadowJar {
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-    implementation 'org.keycloak:keycloak-adapter-core:23.0.4'
 
     implementation 'org.json:json:20231013'
     implementation name: "logstash-core-8.13.0"
+    implementation 'org.jboss.logging:jboss-logging:3.5.3.Final'
 
-    // This dependency is used by the application.
-    //implementation 'com.google.guava:guava:31.1-jre'
-
-    //implementation 'org.keycloak:keycloak-admin-client:23.0.4'
-    //implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-    //implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
-    //implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    implementation 'org.keycloak:keycloak-adapter-core:23.0.4'
+    /*
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    */
 }
 
 tasks.withType(JavaCompile) {
