--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,1 @@
-LOGSTASH_CORE_PATH=C:\\AppDev\\ARLIS\\UMD-ARLIS\\logstash\\logstash-core
+LOGSTASH_CORE_PATH=<directory path of the logstash-core directory in the source code for Logstash>
