--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ shadowJar {
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.22.1'
+    testImplementation name: "jruby"
 
     implementation 'org.json:json:20231013'
     implementation name: "logstash-core-8.13.0"
